tictactoe.css
*
{
    margin: 0;
    padding: 0;
}

body
{
background:linear-gradient(to left, rgb(6, 30, 82), rgb(66, 174, 174));

    font-family: 'Courier New', Courier, monospace;
    text-align: center;
}
h1{
    color: rgb(250, 235, 238);
    font-size: 3rem;
    margin-top: 1rem;
}
.container
{
    height: 70vh;
    display: flex;
  
    justify-content: center;
    align-items: center;
}

.allbox
{
    height: 60vmin;
    width: 60vmin ;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 10px;
}

.box 
{
    height: 18vmin;
    width: 18vmin;
    border-radius: 10px;
    border-color: rgb(250, 235, 238);
    /* border: none; */
    box-shadow: 0rem 0rem 1rem 0rem rgb(97, 181, 119);
    font-size: 8vmin;
    color:#f72585;
    background-color: rgb(6, 6, 5);
}
.b1
{
    padding: 1rem;
    font-size: 1.25rem;
    background-color: transparent;

    border-radius: 1rem ;
    border: white solid 2px;
}
h1
{
    margin-top: 1rem;
    
}
.b2
{
    padding: 1rem;
    font-size: 1.25rem;
    background-color: transparent;
    border-radius: 1rem ;
    border: white solid 2px;
    color: wheat;

}
.b2:hover
{
    background-color: rgb(5, 35, 50);
}
.b1:hover
{
    background-color: rgb(5, 35, 50);
}
#msg
{
    font-size: 50px;
    font-weight: 800;
    color:rgb(223, 218, 238);
   
}


.hide
{
    display: none;
}

